# shieldapi

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  release.yml
shieldapi/: __init__.py  keycloak_utils.py
shieldapi/frameworks/: fastapi.py  flask.py
tests/: conftest.py  mock.py  test_fastapi.py  test_flask.py  test_keycloak_utils.py
