[metadata]
name = shieldapi
version = v1.1.1
author = sintef, Fraunhofer IWM
author_email = yoav.nahshon@iwm.fraunhofer.de
description = A package for endpoint protection of APIs using Keycloak
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    python-keycloak == 1.4.0
    flask >= 2.2.3,<3.0
    fastapi>=0.85.0,<1.0

[options.extras_require]
dev =
    bumpver==2021.1114
    dunamai==1.7.0
    pre-commit~=2.20.0
tests =
    pytest>=7.1.3,<8.0
    requests-mock>=1.10.0,<2.0
    httpx>=0.23.3,<1.0
    semver>=2.13.0,<3.0
    pytest-mock>=3.10.0

[bumpver]
current_version = "v0.0.0"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
setup.cfg =
    version = {version}
